--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,12 +5,12 @@
 <ion-list>
 
   <ion-item>
-    <ion-label fixed>Username</ion-label>
+    <ion-label floating>Username</ion-label>
     <ion-input type="text" value=""></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label fixed>Password</ion-label>
+    <ion-label floating>Password</ion-label>
     <ion-input type="password"></ion-input>
   </ion-item>
 
